--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -85,6 +85,7 @@ orjson==3.10.6
 outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.1
+pandas==2.2.2
 posthog==3.5.0
 protobuf==4.25.4
 pyasn1==0.6.0
